# Brightness-Manager

./: .gitignore  LICENSE  README.md  config.py  gamma_controller.py  lang.py  main.py  package.json  settings_window.py  tray_app.py
src/: index.html  lang.js  main.js  overlay.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  overlay.rs  tray.rs
